Refactor test packages and improve page object structure; add ProductPage and ProductTests for mega menu navigation